Change styling for all CSS, Fix issue with card details spacing

--- a/style.css
+++ b/style.css
@@ -19,6 +19,30 @@ body {
   grid-template-rows: 125px 1fr;
 }
 
+.header > h1 {
+  color: white;
+  margin-left: 25px;
+}
+
+.header > input {
+  width: 50px;
+  height: 50px;
+  background-color: #e91e63;
+  border-radius: 50%;
+  color: white;
+  text-align: center;
+  margin-right: 25px;
+  font-size: 25px;
+}
+
+.header > input:hover {
+  transform: scale(1.1);
+}
+
+.header > input:active {
+  transform: scale(0.9);
+}
+
 .formContainer.hide {
   visibility: hidden;
   opacity: 0;
@@ -30,16 +54,48 @@ body {
   transition: opacity 1s;
   position: fixed;
   flex-direction: column;
-  justify-content: center;
+  justify-content: center;  
   height: 100vh;
   width: 100vw;
-  background-color: rgb(118 119 119 / 62%);
+  background-image: linear-gradient(to top, #e91e6378, #ffffff00);
 }
 
 .form {
   display: flex;
   flex-direction: column;
   align-self: center;
+  text-align: center;
+  border: 10px white;
+  border-radius: 25px;
+  border-style: solid solid double double;
+  gap: 25px;
+  box-shadow: 0px 2px 20px 0px #e91e63;
+  background-image: linear-gradient(to bottom, #e91e63, #ffffff00);
+  padding: 30px;
+  justify-content: center;
+  font-size: large;
+  color: white;
+}
+
+.formInput {
+  display: flex;
+  flex-direction: column;
+}
+
+#btnSubmit{
+  width: 125px;
+  height: 50px;
+  font-weight: bolder;
+  font-size: 15px;
+  border: 5px solid white;
+  border-radius: 5px;
+  background-color: #045cc2;
+  color:white;
+}
+
+#btnSubmit:hover{
+  transform: scale(0.95);
+  background-color: #024188;
 }
 
 .header {
@@ -48,33 +104,12 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.header > h1 {
-  color: white;
-  margin-left: 25px;
-}
-
-.header > input {
-  width: 50px;
-  height: 50px;
-  background-color: rgb(17, 152, 241);
-  border-radius: 50%;
-  color: white;
-  text-align: center;
-  margin-right: 25px;
-}
-
-.header > input:hover {
-  transform: scale(1.1);
-}
-
-.header > input:active {
-  transform: scale(0.9);
+  z-index: 1;
+  box-shadow: 0px 0px 20px 5px black;
 }
 
 .content {
-  background-image: linear-gradient(to bottom, black, #53299f);
+  background-image: linear-gradient(to left, black, #53299f);
   grid-area: 2/1/3;
 }
 
@@ -86,21 +121,57 @@ body {
 }
 
 .card {
+  background-image: linear-gradient(to bottom, #e91e63, #ffffff00);
   width: 200px;
   height: 300px;
-  background-color: #53299f;
   color: white;
-  border: 5px solid rgb(255, 255, 255);
-  border-radius: 20px;
+  border-bottom: 1px solid #e2e2e2;
+  border-left: 1px solid white;
+  border-radius: 25px 20px 25px 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   transition: 0.4s;
+  box-shadow: inset -9px 6px 0px 1px #ffffff;
 }
 
-.card > h3 {
+.card:hover {
+  transform: scale(1.05);
+}
+
+.bookbox {
+  display: flex;
+  flex-direction: column;
+  flex: 0.8;
+  text-align: center;
+  word-wrap: break-word;
+  width: 175px;
+}
+
+.bookbox > h3 {
   margin-top: 25px;
   text-align: center;
+  padding-bottom: 25px;
+}
+
+.bookdetails {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: center;
+}
+
+#authorText {
+  flex: 0.5;
+  color: #ffeb3b;
+}
+
+#pageText {
+  flex: 0.2;
+}
+
+.switchBox {
+  margin-top: 25px;
 }
 
 .switch {
@@ -108,7 +179,7 @@ body {
   display: inline-block;
   width: 50px;
   height: 25px;
-  top: 180px;
+  margin-bottom: 8px;
 }
 
 .switch input {
@@ -163,11 +234,27 @@ body {
   border-radius: 50%;
 }
 
+.card > input {
+  height: 30px;
+  width: 80px;
+  background-color: #e91e63;
+  border: 3px solid #ebe6e6;
+  border-radius: 10px;
+  cursor: pointer;
+  font-weight: bolder;
+  color: white;
+}
+
+.card > input:hover {
+  transform: scale(1.1);
+}
+
 .info {
   display: flex;
   flex-direction: column;
-  background-color: rgb(63, 63, 63);
+  background-color: rgb(0, 0, 0);
   grid-area: 2/2;
+  color: white;
 }
 
 .info-block {
@@ -176,8 +263,8 @@ body {
   justify-content: center;
   flex-direction: column;
   margin: 25px;
-  border-top: 2px solid black;
-  border-bottom: 2px solid black;
+  border-top: 2px solid rgb(255, 255, 255);
+  border-bottom: 2px solid rgb(255, 255, 255);
 }
 
 .info-block > h2 {
@@ -192,6 +279,17 @@ body {
   margin-bottom: 25px;
 }
 
+.infos {
+  display: flex;
+  justify-content: space-between;
+}
+
+.infos #totalBooks,
+#totalRead,
+#totalUnread {
+  color: #ffeb3b;
+}
+
 .info-clear-block {
   text-align: center;
   width: auto;
@@ -200,8 +298,8 @@ body {
   gap: 20px;
   justify-content: center;
   margin: 25px;
-  border-top: 2px solid black;
-  border-bottom: 2px solid black;
+  border-top: 2px solid rgb(255, 255, 255);
+  border-bottom: 2px solid rgb(255, 255, 255);
 }
 
 .info-clear-block > h2 {
@@ -210,11 +308,14 @@ body {
 
 .info-clear-block > input {
   margin: auto;
-  width: 90px;
+  width: 100px;
   height: 50px;
-  border-radius: 20px;
-  background-color: red;
+  border-radius: 15px;
+  border: 3px solid white;
+  background-color: #e91e63;
+  font-weight: bolder;
   margin-bottom: 25px;
+  font-size: 15px;
 }
 
 .info-clear-block > input:hover {
@@ -224,3 +325,7 @@ body {
 .info-clear-block > input:active {
   transform: scale(0.9);
 }
+
+
+
+
